# grip

./: .cursorrules  .gitignore  CLAUDE.md  LICENSE  README.md  grip.py  pyproject.toml
grip/: __init__.py  cache.py  country.py  http.py  jsonutil.py  logging.py  password.py  randgen.py  reflect.py  schemas.py  slug.py  smtp.py  time.py  yamlutil.py
grip/config/: __init__.py  exceptions.py
grip/email/: common.py  config.py  dummy.py  imap.py  smtp.py
tests/: conftest.py  test_config.py  test_email.py  test_misc.py  test_password.py  test_schemas.py  test_slug.py  test_smtp.py
